tests/fixtures/invalid/oct_2_args.py
# oct() takes at most 1 argument, got 2
x = oct(1, 1)
